# event-graph-analyzing-actor-behavior-from-tasks

./: .gitignore  Clusterer.py  DFGVisualizer.py  PerformanceRecorder.py  main_task_analysis.py  pyproject.toml
constructors/: ClassConstructor.py  ClusterConstructor.py  EventGraphConstructor.py  HighLevelEventConstructor.py
meta-output/patterns/: lattice_bpic2017_case_attr_freq_geq_10_20.pkl
output/bpic2017_case_attr/P_freq_geq_10__C_20/DFGs/DFG_clusters/: DFG_case_1.0  DFG_resources_overlaid_5__2016_08_01_2017_02_01_R_29_113_5
pattern_encoders/: BPIC2017PatternEncoder.py
performance/: constructing_action_class_nodes_bpic2017_case_attr.csv  constructing_cluster_DFG_bpic2017_case_attr.csv  constructing_clusters_bpic2017_case_attr.csv  constructing_event_graph_bpic2017_case_attr.csv  constructing_intra_cluster_DFG_bpic2017_case_attr.csv  constructing_resources_overlaid_DFG_bpic2017_case_attr.csv  constructing_task_instance_class_nodes_bpic2017_case_attr.csv  constructing_task_instance_nodes_bpic2017_case_attr.csv
preprocessors/: BPIC2017Preprocessor.py
